# nabooth-print-agent

./: .gitignore  README.md  SIGNING.md  index.html  install.ps1  install.sh  package.json  pnpm-lock.yaml
.github/workflows/: agent.yml  build.yml
agent/: autostart.go  cloud.go  config.go  go.mod  jobs_delete_test.go  main.go  open.go  print.go  printers.go  server.go  uninstall.go  update.go  update_test.go
agent/web/: app.js  index.html  styles.css
scripts/: upload-print-agent.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
