[package]
name = "print-agent"
version = "0.1.0"
description = "Nabooth Print Agent"
authors = ["nabooth"]
edition = "2021"

[lib]
name = "print_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
tempfile = "3"
